[package]
name = "noise"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
color-eyre = "0.6"
hound = "3.5"
once_cell = "1.19"
plotters = "0.3"
plotters-svg = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
