[package]
name = "noise"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
clap = { version = "4.0", features = ["derive"] }
color-eyre = "0.6"
hound = "3.5"
once_cell = "1.19"
plotters = "0.3"
plotters-svg = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
